--- a/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.html
+++ b/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.html
@@ -33,6 +33,10 @@
           <mat-icon>person_outline</mat-icon>
           <span>{{ recipe.portions }} porcje</span>
         </div>
+        <div class="app-recipe-detail--center-icon">
+          <mat-icon>signal_cellular_alt</mat-icon>
+          <span>{{ recipe.level }}</span>
+        </div>
       </div>
       <h2>Składniki:</h2>
       <div
