--- a/frontend/src/app/components/recipes/recipe-card/recipe-card.component.html
+++ b/frontend/src/app/components/recipes/recipe-card/recipe-card.component.html
@@ -14,6 +14,10 @@
         <mat-icon>person_outline</mat-icon>
         <span>{{ recipe.portions }}</span>
       </div>
+      <div class="app-recipe-card__container--recipe-summary-description">
+        <mat-icon>signal_cellular_alt</mat-icon>
+        <span>{{ recipe.level }}</span>
+      </div>
     </div>
     <div class="app-recipe-card__container--recipe-show-button">
       <button
