--- a/frontend/src/app/components/products/products.component.html
+++ b/frontend/src/app/components/products/products.component.html
@@ -62,6 +62,12 @@
           <mat-icon>add</mat-icon>
         </button>
       </div>
+      <a
+        class="app-products__card--search-recipes"
+        routerLink="/recipes"
+        *ngIf="chosenProducts.length"
+        >Wyszukaj przepisy!</a
+      >
     </div>
     <div class="app-products__card--products col-lg-12 col-md-12 col-sm-12">
       <div
