--- a/frontend/src/app/components/products/products.component.scss
+++ b/frontend/src/app/components/products/products.component.scss
@@ -50,6 +50,13 @@ $products-delete-icon-color: #ab1818;
       .app-products__card--input {
         width: 28vw;
       }
+
+      .app-products__card--search-recipes {
+        font-weight: 500;
+        color: $products-text-main-color;
+        padding-top: 15px;
+        font-size: 15px;
+      }
     }
 
     .app-products__card--products {
@@ -166,10 +173,6 @@ input[type="number"] {
       .app-products__card--insert-products {
         h1 {
           font-size: 22px;
-        }
-
-        p {
-          font-size: 10px;
         }
       }
 
