change pagginator layout in recipes

--- a/frontend/src/app/components/products/products.component.scss
+++ b/frontend/src/app/components/products/products.component.scss
@@ -119,13 +119,13 @@ $products-delete-icon-color: #ab1818;
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
+  appearance: none;
   margin: 0;
 }
 
 /* disable for Firefox */
 input[type="number"] {
-  -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 ::ng-deep .mat-mini-fab.mat-accent {
