--- a/frontend/src/app/components/recipes/recipes.component.html
+++ b/frontend/src/app/components/recipes/recipes.component.html
@@ -76,13 +76,23 @@
       <app-recipe-card [recipe]="recipe"></app-recipe-card>
     </div>
   </div>
-  <div class="app-recipes__container">
-    <mat-paginator
-      class="app-recipes__container--paginator"
-      [length]="recipes.length"
-      [pageSize]="12"
-      [pageSizeOptions]="[12, 24, 36, 48]"
-      (page)="onChangedPage($event)"
-    ></mat-paginator>
+  <div class="app-recipes__paginator">
+    <button
+      class="app-recipes__paginator--button"
+      mat-mini-fab
+      [disabled]="currentPage === 1"
+      (click)="getRecipes('previous')"
+    >
+      <mat-icon>chevron_left</mat-icon>
+    </button>
+    <span class="app-recipes__paginator--current-page">{{ currentPage }}</span>
+    <button
+      class="app-recipes__paginator--button"
+      mat-mini-fab
+      [disabled]="currentPage * 12 > countOfRecipes"
+      (click)="getRecipes('next')"
+    >
+      <mat-icon>chevron_right</mat-icon>
+    </button>
   </div>
 </div>
