--- a/frontend/src/app/components/recipes/recipes.component.html
+++ b/frontend/src/app/components/recipes/recipes.component.html
@@ -65,7 +65,7 @@
     <div
       class="app-recipes__container--number-of-recipes col-12 col-md-4 col-lg-4"
     >
-      Znaleziono przepisów: {{ recipes.length }}
+      Znaleziono przepisów: {{ countOfRecipes }}
     </div>
   </div>
   <div class="app-recipes__container row">
