--- a/frontend/src/app/components/schedule/schedule.component.scss
+++ b/frontend/src/app/components/schedule/schedule.component.scss
@@ -82,6 +82,7 @@ mat-checkbox {
 
             &:hover {
               transform: scale(1.1);
+              color: #ab1818;
             }
           }
         }
