--- a/frontend/src/app/components/account-settings/account-settings.component.scss
+++ b/frontend/src/app/components/account-settings/account-settings.component.scss
@@ -8,6 +8,11 @@ span {
   margin: 0;
   padding: 0;
   color: $font-color;
+}
+
+h1,
+h2,
+span {
   text-align: center;
 }
 
@@ -72,6 +77,10 @@ span {
 
       &:hover {
         transform: scale(1.1);
+      }
+
+      &:nth-child(2):hover {
+        color: #ab1818;
       }
     }
 
