--- a/frontend/src/app/components/account-settings/set-body-parameters-dialog/set-body-parameters-dialog.component.html
+++ b/frontend/src/app/components/account-settings/set-body-parameters-dialog/set-body-parameters-dialog.component.html
@@ -1,7 +1,7 @@
 <div mat-dialog-content class="app-set-body-parameters-dialog__container">
   <form [formGroup]="bodyParametersForm">
     <h1>Podaj parametry</h1>
-    <div>
+    <div class="app-set-body-parameters-dialog__container--container-input">
       <mat-form-field
         appearance="outline"
         class="app-set-body-parameters-dialog__container--input"
@@ -18,7 +18,7 @@
         <mat-error>To pole jest wymagane.</mat-error>
       </mat-form-field>
     </div>
-    <div>
+    <div class="app-set-body-parameters-dialog__container--container-input">
       <mat-form-field
         appearance="outline"
         class="app-set-body-parameters-dialog__container--input"
@@ -32,7 +32,7 @@
         <mat-error>To pole jest wymagane.</mat-error>
       </mat-form-field>
     </div>
-    <div>
+    <div class="app-set-body-parameters-dialog__container--container-input">
       <mat-form-field
         appearance="outline"
         class="app-set-body-parameters-dialog__container--input"
@@ -49,7 +49,7 @@
         <mat-error>To pole jest wymagane.</mat-error>
       </mat-form-field>
     </div>
-    <div>
+    <div class="app-set-body-parameters-dialog__container--container-input">
       <mat-form-field
         appearance="outline"
         class="app-set-body-parameters-dialog__container--input"
@@ -66,7 +66,7 @@
         <mat-error>To pole jest wymagane.</mat-error>
       </mat-form-field>
     </div>
-    <div>
+    <div class="app-set-body-parameters-dialog__container--container-input">
       <mat-form-field
         appearance="outline"
         class="app-set-body-parameters-dialog__container--input"
@@ -77,6 +77,24 @@
           <mat-option value="przyrost wagi">przyrost wagi</mat-option>
           <mat-option value="utrzymanie wagi">utrzymanie wagi</mat-option>
           <mat-option value="spadek wagi">spadek wagi</mat-option>
+        </mat-select>
+        <mat-error>To pole jest wymagane.</mat-error>
+      </mat-form-field>
+    </div>
+    <div class="app-set-body-parameters-dialog__container--container-input">
+      <mat-form-field
+        appearance="outline"
+        class="app-set-body-parameters-dialog__container--input"
+      >
+        <mat-label>Aktywność fizyczna</mat-label>
+        <mat-select formControlName="physicalActivity" required>
+          <mat-option>--</mat-option>
+          <mat-option value="brak ćwiczeń">brak ćwiczeń</mat-option>
+          <mat-option value="znikoma">znikoma</mat-option>
+          <mat-option value="mała">mała</mat-option>
+          <mat-option value="umiarkowana">umiarkowana</mat-option>
+          <mat-option value="duża">duża</mat-option>
+          <mat-option value="bardzo duża">bardzo duża</mat-option>
         </mat-select>
         <mat-error>To pole jest wymagane.</mat-error>
       </mat-form-field>
