--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "src/app/utilities/variables";
+
 html,
 body {
   height: 100%;
@@ -10,4 +12,48 @@ body {
 
 .mat-typography {
   background-color: #fafafa;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span {
+  color: $font-color;
+  margin: 0;
+  padding: 0;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  appearance: textfield;
+}
+
+.button-with-border {
+  width: 75%;
+  border-radius: 5px;
+  padding: 11px 23px;
+  background-color: white;
+  border-color: $font-color;
+  border-width: 1px;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 500;
+  transition: all 0.7s ease-in-out;
+  margin-bottom: 25px;
+
+  &:hover {
+    transform: scale(1.02);
+    -webkit-box-shadow: 2px 1px 8px 0px rgba(177, 177, 173, 1);
+    -moz-box-shadow: 2px 1px 8px 0px rgba(177, 177, 173, 1);
+    box-shadow: 2px 1px 8px 0px rgba(177, 177, 173, 1);
+  }
 }
