--- a/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.scss
+++ b/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.scss
@@ -37,13 +37,13 @@ app-add-another-step-to-recipe {
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
+  appearance: none;
   margin: 0;
 }
 
 /* disable for Firefox */
 input[type="number"] {
-  -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 ::ng-deep .mat-horizontal-content-container {
