--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -14,6 +14,12 @@ body {
   background-color: #fafafa;
 }
 
+.text {
+  color: $font-color;
+  margin: 0;
+  padding: 0;
+}
+
 h1,
 h2,
 h3,
@@ -22,7 +28,6 @@ h5,
 h6,
 p,
 span {
-  color: $font-color;
   margin: 0;
   padding: 0;
 }
@@ -43,6 +48,7 @@ input[type="number"] {
   padding: 11px 23px;
   background-color: white;
   border-color: $font-color;
+  color: $font-color;
   border-width: 1px;
   text-transform: uppercase;
   font-size: 13px;
