calculate user demand

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -106,7 +106,10 @@
         routerLink="/login"
         >Logowanie</a
       >
-      <a (click)="sidenav.toggle()" class="app-navbar__desktop--mobile-link"
+      <a
+        *ngIf="userIsAuthenticated"
+        (click)="sidenav.toggle(); mobileMenuIsOpen = !mobileMenuIsOpen"
+        class="app-navbar__desktop--mobile-link"
         >Wyloguj się</a
       >
     </div>
