get user data from be

--- a/frontend/src/app/components/account-settings/account-settings.component.html
+++ b/frontend/src/app/components/account-settings/account-settings.component.html
@@ -133,7 +133,7 @@
         *ngIf="!userData.recipes.length"
         class="user-recipes-container__list text"
       >
-        <p>Nie dodano przepisów.</p>
+        <p class="user-recipes-container__header">Nie dodano przepisów.</p>
       </div>
     </div>
   </mat-card>
