add snack to schedule

--- a/frontend/src/app/components/account-settings/set-body-parameters-dialog/set-body-parameters-dialog.component.html
+++ b/frontend/src/app/components/account-settings/set-body-parameters-dialog/set-body-parameters-dialog.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="bodyParametersForm" class="form">
-  <h1 class="form__header text">Podaj parametry</h1>
+  <h1 class="form__header text">Podaj podstawowe parametry ciała</h1>
   <div class="form__input-container">
     <mat-form-field appearance="outline" class="form__input">
       <mat-label>Wiek</mat-label>
