--- a/frontend/src/app/components/schedule/schedule.component.scss
+++ b/frontend/src/app/components/schedule/schedule.component.scss
@@ -1,6 +1,4 @@
-$schedule-background-color: #fafafa;
-$font-color: #616159;
-
+@import "../../utilities/variables";
 p,
 h1 {
   margin: 0;
@@ -14,130 +12,171 @@ h1 {
 ::ng-deep .mat-checkbox-ripple .mat-ripple-element {
   background-color: green !important;
 }
+
 mat-checkbox {
   padding: 0;
   text-align: center;
 }
 
-.app-schedule {
-  background-color: $schedule-background-color;
+.schedule-container {
+  background-color: $background-color;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
+}
 
-  .app-schedule__card {
+.app-schedule__card {
+  display: flex;
+  padding: 0;
+  width: 90%;
+  height: auto;
+  margin-top: 90px;
+  min-height: 85vh;
+
+  .app-schedule__card--meals-container {
     display: flex;
-    padding: 0;
-    width: 90%;
-    height: auto;
-    margin-top: 90px;
-    min-height: 85vh;
+    flex-direction: column;
+    justify-content: center;
+    padding: 30px 30px 30px 45px;
 
-    .app-schedule__card--meals-container {
-      display: flex;
+    .app-schedule__card--meals-details {
       flex-direction: column;
-      justify-content: center;
-      padding: 30px 30px 30px 45px;
+      padding: 15px 0;
+      border-bottom: dotted 1px #ccc;
+      margin: 0;
 
-      .app-schedule__card--meals-details {
-        flex-direction: column;
-        padding: 15px 0;
-        border-bottom: dotted 1px #ccc;
-        margin: 0;
+      .app-schedule__card--meal-type-header {
+        padding-bottom: 10px;
+        font-weight: 500;
+        font-size: 16px;
+      }
 
-        .app-schedule__card--meal-type-header {
-          padding-bottom: 10px;
-          font-weight: 500;
-          font-size: 16px;
+      .app-schedule__card--meal-details {
+        display: flex;
+        align-items: center;
+
+        .app-schedule__card--recipe-image {
+          width: 100px;
+          height: 50px;
+          cursor: pointer;
         }
 
-        .app-schedule__card--meal-details {
-          display: flex;
-          align-items: center;
+        .app-schedule__card--recipe-name {
+          cursor: pointer;
+          font-size: 15px;
 
-          .app-schedule__card--recipe-image {
-            width: 100px;
-            height: 50px;
-            cursor: pointer;
+          &:hover {
+            text-decoration: underline;
           }
+        }
 
-          .app-schedule__card--recipe-name {
-            cursor: pointer;
-            font-size: 15px;
+        .app-schedule__card--delete-icon {
+          margin: 0;
+          padding: 0;
+          margin-left: auto;
+          margin-right: 10px;
+          cursor: pointer;
+          transition: all 0.5s ease-in-out;
 
-            &:hover {
-              text-decoration: underline;
-            }
-          }
-
-          .app-schedule__card--delete-icon {
-            margin: 0;
-            padding: 0;
-            margin-left: auto;
-            margin-right: 10px;
-            cursor: pointer;
-            transition: all 0.5s ease-in-out;
-
-            &:hover {
-              transform: scale(1.1);
-              color: #ab1818;
-            }
+          &:hover {
+            transform: scale(1.1);
+            color: #ab1818;
           }
         }
       }
     }
+  }
 
-    .app-schedule__card--details-container {
+  .app-schedule__card--details-container {
+    display: flex;
+    flex-direction: column;
+    padding: 30px 10px;
+
+    .app-schedule__card--details-header {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      padding: 45px 10px;
+      align-items: center;
 
-      .app-schedule__card--details-header {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        mat-icon {
-          margin-right: 20px;
-          font-weight: 500;
-          font-size: 35px;
-          width: 35px;
-          height: 35px;
-        }
-        h1 {
-          text-transform: uppercase;
-          font-weight: 500;
-          padding-bottom: 20px;
-          text-align: center;
-          margin-right: 20px;
-        }
+      mat-icon {
+        margin-right: 20px;
+        font-weight: 500;
+        font-size: 35px;
+        width: 35px;
+        height: 35px;
       }
-
-      .app-schedule__card--detail {
+      h1 {
+        text-transform: uppercase;
+        font-weight: 500;
         padding-bottom: 20px;
-        display: flex;
-        font-size: 16px;
-        align-items: baseline;
-
-        .app-schedule__card--dotted {
-          border-bottom: 1px dotted #aaa;
-          flex-grow: 1;
-          margin: 0 10px;
-        }
-
-        .app-schedule__card--detail-to-right {
-          margin-left: auto;
-          margin-right: 20px;
-        }
-
-        p {
-          font-weight: 500;
-        }
+        text-align: center;
+        margin-right: 20px;
       }
+    }
+
+    .app-schedule__card--buttons {
+      display: flex;
+      margin: 20px 0;
+
+      .white-button {
+        margin: 0 2px;
+        padding: 10px 15px;
+      }
+    }
+
+    .app-schedule__card--detail {
+      padding-bottom: 5px;
+      display: flex;
+      align-items: baseline;
+
+      .app-schedule__card--dotted {
+        border-bottom: 1px dotted #aaa;
+        flex-grow: 1;
+        margin: 0 10px;
+      }
+
+      .app-schedule__card--detail-to-right {
+        margin-left: auto;
+        margin-right: 20px;
+      }
+
+      p {
+        font-weight: 500;
+      }
+    }
+
+    .header {
+      text-align: center;
+      margin-bottom: 10px;
+      font-weight: 500;
+    }
+
+    .subheader {
+      text-align: center;
+      font-weight: 400;
+    }
+
+    .snack-container {
+      max-height: 31vh;
+      overflow: auto;
+    }
+
+    .snack {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-bottom: solid 1px #ccc;
+    }
+
+    .snack__name {
+      width: 95%;
+    }
+
+    .snack__delete {
+      float: right;
     }
   }
 }
