--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -63,3 +63,22 @@ input[type="number"] {
     box-shadow: 2px 1px 8px 0px rgba(177, 177, 173, 1);
   }
 }
+
+.white-button {
+  width: 100%;
+  padding: 14px 23px;
+  border-radius: 4px;
+  text-transform: uppercase;
+  color: $font-color;
+  background-color: white;
+  font-size: 13px;
+  font-weight: 500;
+  border: none;
+  background: none;
+  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+    0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+}
+
+.close-delete-icon {
+  color: $close-delete-icon-color;
+}
